# gba

./: .gitignore  CMakeLists.txt
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Gba  build.ninja  cmake_install.cmake
build-debug/.cmake/api/v1/reply/: cache-v2-18518c6cfc506ed399e8.json  cmakeFiles-v1-c34003193aaaed8c7f5d.json  codemodel-v2-13325bbc16f2c6f61771.json  index-2022-01-23T20-34-48-0861.json  target-Gba-Debug-dd117f165d109ef28230.json
build-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-release/.cmake/api/v1/reply/: cache-v2-e8621c50800600acfb1d.json  cmakeFiles-v1-8d8e370c78c797b1bd95.json  codemodel-v2-0e330e61dc7e4fe31591.json  index-2022-01-23T20-34-48-0861.json  target-Gba-Release-f6a2177923fead82f820.json
include/: gba.hpp  util.hpp
include/bus/: bus.hpp
include/cpu/: cpu.hpp
include/cpu/arm/: arm.hpp
include/cpu/thumb/: thumb.hpp
include/mmu/: mmu.hpp
include/rom/: rom.hpp
src/: gba.cpp  main.cpp
src/bus/: bus.cpp
src/cpu/: cpu.cpp
src/cpu/arm/: arm.cpp
src/cpu/thumb/: thumb.cpp
src/mmu/: mmu.cpp
